--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
         <div class="box_container">
-            <h1 class="title_const">Constants</h1>
+            <h1 class="title_const">Константи</h1>
             <ul class="list_box_const">
                 <li class="list_const">Значення константи e = <br><span id="e_const"></span></li>
                 <li class="list_const">Значення константи π = <br><span id="pi_const"></span></li>
@@ -19,7 +19,7 @@
                 <li class="list_const">Корінь квадратний із двох = <br><span id="sqrt_2"></span></li>
                 <li class="list_const">Корінь квадратний з однієї другої = <br><span id="sqrt_half"></span></li>
             </ul>
-            <h1 class="title_function">Functions</h1>
+            <h1 class="title_function">Функції</h1>
             <ul class="list_box_function">
                 <li class="list_function">Результат округлення числа 1,44 за правилами арифметики:<br> y =<span id="round"></span></li>
                 <li class="list_function"> Результат округлення числа 1,54 за правилами арифметики:<br> y =<span id="round1"></span></li>
@@ -27,7 +27,7 @@
                 <li class="list_function">Вибір найменшого із двох чисел 4 й 2:<br> y =<span id="min"></span></li>
                 <li class="list_function">Результат добування квадратного кореня з 4:<br> y =<span id="square"></span></li>
             </ul>
-            <h1 class="title_rand">Random number generator</h1>
+            <h1 class="title_rand">Генератор випадкових чисел</h1>
             <div class="rand_box">
                 <p class="rand_text">Формування випадкових чисел в інтервалі [0;1]:<br> y = <span id="random_number"></span></p>
             </div>
