--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         document.getElementById('pi_const').textContent = Math.PI;
         document.getElementById('log_e_dec').textContent = Math.log10(Math.E);
         document.getElementById('log_e_bin').textContent = Math.log2(Math.E);
-        document.getElementById('log_10').textContent = Math.log10(10);
-        document.getElementById('log_2').textContent = Math.log2(2);
+        document.getElementById('log_10').textContent = Math.log(10);
+        document.getElementById('log_2').textContent = Math.log(2);
         document.getElementById('sqrt_2').textContent = Math.sqrt(2);
         document.getElementById('sqrt_half').textContent = Math.sqrt(0.5);
 
